--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "develop-with-astro",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "astro": "^3.1.2"
-  }
+    "name": "develop-with-astro",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "astro": "^3.1.2"
+    },
+    "devDependencies": {
+        "astro-purgecss": "^3.2.1",
+        "autoprefixer": "^10.4.16",
+        "csstype": "^3.1.2",
+        "prettier": "^3.0.3",
+        "prettier-plugin-astro": "^0.12.0"
+    }
 }
